# NICO

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  DEVELOPMENT_EXECUTION_PLAN.md  Dockerfile  LICENSE  POST_RELEASE_EXPANSION_PLAN.md  README.md  README.tmp  SECURITY.md  docker-compose.yml  index.html  package.json  pyproject.toml  railway.json  report-semantics-test-output.txt  requirements.txt  run_local.py  sitecustomize.py  vercel.json
.github/: dependabot.yml  pull_request_template.md
audit-results/: accurate-green-release-contract.json
docs/: .keep-mid-repair  .probe-note  ARCHITECTURE.md  ARTIFACT_ACCESS_DIAGNOSTICS.md  ASSESSMENT_RECOVERY.md  AUDIT_EVIDENCE_V18.md  BACKUP_RESTORE_VERIFICATION.md  BRANCH_GOVERNANCE.md  CLIENT_JOB_API_V8.md  CLIENT_JOB_MODE_V7.md  COMPREHENSIVE_DECISION_GRADE_ACCEPTANCE_V5.md  COMPREHENSIVE_DECISION_GRADE_CHANGELOG_V5.md  COMPREHENSIVE_DECISION_GRADE_RELEASE_NOTES_V5.md  COMPREHENSIVE_DECISION_GRADE_SCOPE_V5.md  COMPREHENSIVE_DECISION_GRADE_TEST_MATRIX_V5.md  COMPREHENSIVE_DECISION_GRADE_V5.md  COMPREHENSIVE_FRONTEND_BLOCKER.md  COMPREHENSIVE_FRONTEND_REPAIR_ACCEPTANCE.md  CYBER_TWIN.md  DEPLOYMENT_ENV_REQUIRED_FOR_85.md  DEPLOYMENT_LATER.md  DEPLOYMENT_MARKER.md  DEPLOY_NOTE.md  DEPLOY_NOTE_13.md  DEPLOY_NOTE_3.md  DEPLOY_NOTE_5.md  DEPLOY_NOTE_7.md  DEPLOY_NOTE_8.md  DEPLOY_NOTE_9.md  EASY_HOME_NAV_V16.md  EASY_MODE_UI_V14.md  EASY_MODE_WORKFLOW.md  ES_MX_LANGUAGE_MODE.md  EXPRESS_CURRENT_STATE.md  EXPRESS_FINAL_REPORT_TRUTH_REPAIR.md  EXPRESS_FINAL_TRUTH_REPAIR_V34.md  FINAL_V12_OUTPUT_SANITIZATION.md  FINAL_V12_OUTPUT_SANITIZATION.md.tmp  FINAL_V12_OUTPUT_SANITIZATION_VERIFICATION.md  FRONTEND_NOTE.md  (+165 more)
nico/: __init__.py  __main__.py  accurate_green_pdf_polish_v2.py  accurate_green_release_v2.py  admin_security.py  api_runner.py  approval_queue.py  approved_delivery_access.py  approved_delivery_acknowledgments.py  approved_delivery_atomic.py  approved_delivery_operational_readiness.py  approved_delivery_package.py  approved_delivery_receipts.py  approved_delivery_recovery.py  approved_delivery_storage_policy.py  artifact_evidence.py  (+512 more)
(+1011 files in other folders)
